fixing the pictures on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ section.module.parallax-3 {
 /* Small */
 @media only screen and (max-width: 320px) {
       section.module.paralax{
-        background-attachment: fixed;
+        background-attachment: scroll;
       }
       section.module.parallax-1 {
         background-image: url("../img/content/bg/small.jpg");
